[package]
name = "jmclib"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1" }
tempfile = "3"
slog = "2.5"
slog-term = "2.5"
atty = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
