[package]
name = "jmclib"
version = "0.1.0"
edition = "2021"

[features]
sqlite = ["dep:rusqlite", "dep:anyhow"]

[dependencies]
toml = "0.8"
serde = { version = "1" }
tempfile = "3"
slog = "2.5"
slog-term = "2.5"
atty = "0.2"
rusqlite = { version = "0.29", features = ["bundled"], optional = true }
anyhow = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
